[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/grass.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/Coin.wav" type="AudioStream" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
playtime = 30

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="EnemyContainer" type="Node" parent="."]

[node name="CoinContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
